--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "eris": "^0.17.2",
     "iconv-lite": "^0.6.3",
-    "request": "^2.88.2",
-    "requests": "^0.3.0"
+    "request": "^2.88.2"
   }
 }
